--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
     "description": "Mobikul app",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node index.js",
-      "ready": "nodemon index.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js",
+        "ready": "nodemon index.js"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "axios": "1.6.5",
-      "bcrypt": "5.1.1",
-      "express": "4.18.3",
-      "knex": "3.1.0",
-      "multer": "1.4.5-lts.1",
-      "nodemailer": "^6.9.13",
-      "objection": "3.1.3",
-      "pg": "8.11.3",
-      "sharp": "0.33.3",
-      "swagger-jsdoc": "6.2.8",
-      "swagger-ui-express": "5.0.0",
-      "uuid": "9.0.1"
+        "axios": "1.6.5",
+        "bcrypt": "5.1.1",
+        "express": "4.18.3",
+        "jsonwebtoken": "^9.0.2",
+        "knex": "3.1.0",
+        "multer": "1.4.5-lts.1",
+        "nodemailer": "^6.9.13",
+        "objection": "3.1.3",
+        "pg": "8.11.3",
+        "sharp": "0.33.3",
+        "swagger-jsdoc": "6.2.8",
+        "swagger-ui-express": "5.0.0",
+        "uuid": "9.0.1"
     }
-  }
+}
