--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "dependencies": {
         "axios": "1.6.5",
         "bcrypt": "5.1.1",
+        "cloudinary": "^1.41.3",
         "dotenv": "^16.4.7",
         "express": "4.18.3",
         "jsonwebtoken": "^9.0.2",
         "knex": "3.1.0",
-        "multer": "1.4.5-lts.1",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.9.13",
         "objection": "3.1.3",
         "pg": "8.11.3",
