fix: some changes

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,9 @@
 NODE_ENV=development
-PORT=3000
-DB_HOST=localhost
-DB_USER=dev_user
-DB_PASS=dev_password
+PORT=4002
+DB_HOST=127.0.0.1
+DB_USER=postgres
+DB_PASS=password
+DB_DATABASE=mobikul
+
+
+ 
