--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,6 @@
 NODE_ENV=production
-PORT=8000
-DB_HOST=prod-db-server
-DB_USER=prod_user
-DB_PASS=prod_password
+PORT=4001
+DB_HOST=127.0.0.1
+DB_USER=postgres
+DB_PASS=password
+DB_DATABASE=mobiku
