--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node index.js",
-        "ready": "nodemon index.js"
+        "production": "cross-env NODE_ENV=production nodemon index.js",
+        "development": "cross-env NODE_ENV=development nodemon index.js"
     },
     "author": "",
     "license": "ISC",
@@ -22,10 +23,14 @@
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^6.9.13",
         "objection": "3.1.3",
+        "path": "^0.12.7",
         "pg": "8.11.3",
         "sharp": "0.33.3",
         "swagger-jsdoc": "6.2.8",
         "swagger-ui-express": "5.0.0",
         "uuid": "9.0.1"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3"
     }
 }
